GNOME Bugzilla – Bug 793507
rtspsrc: Missing getter for new "backchannel" property
Last modified: 2018-02-16 12:54:27 UTC
Running gst-inspect rtspsrc Gives the following error ** (gst-inspect-1.0:6207): WARNING **: gstrtspsrc.c:1561: invalid property id 40 for "backchannel" of type 'GParamEnum' in 'GstRTSPSrc'
Created attachment 368418 [details] [review] Fix get_property code in rtspsrc Fix missing read code in rtspsrc for property backchannel
Thanks! commit d64ae7b01abc3b681064e45ed4ad5e31a95358ab (HEAD -> master) Author: James Stevenson <james@stev.org> Date: Fri Feb 16 12:25:29 2018 +0000 rtspsrc: Fix missing read property of backchannel Add missing read property code for backchannel https://bugzilla.gnome.org/show_bug.cgi?id=793507